# LatticeDNAOrigami

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
apps/: calc_num_walks.cpp  main.cpp
cmake/: CheckGit.cmake  version.cpp.in
examples/: biases_mwus-numfulldomains.json  constant-temp.inp  enum.inp  four_unbound.json  moveset_four.json  ops_standard.json  ptmc.inp  ptmwus.inp  snodin-numfulldomains.windows  snodin_assembled.json  snodin_unbound.json
include/: annealing_simulation.h  bias_functions.h  cb_movetypes.h  cd_scaffold_regrowth.h  constant_temp_simulation.h  domain.h  enumerate.h  files.h  hash.h  ideal_random_walk.h  met_movetypes.h  mezei_us_simulation.h  movetypes.h  nearest_neighbour.h  order_params.h  orientation_movetype.h  origami_potential.h  origami_system.h  parser.h  ptmc_simulation.h  random_gens.h  rg_movetypes.h  simulation.h  stoichastic_weights_simulation.h  test_origami_system.h  top_constraint_points.h  transform_movetypes.h  us_simulation.h  utility.h  version.h
include/LatticeDNAOrigami/: annealing_simulation.hpp  bias_functions.hpp  cb_movetypes.hpp  constant_temp_simulation.hpp  domain.hpp  enumerate.hpp  files.hpp  hash.hpp  ideal_random_walk.hpp  met_movetypes.hpp  movetypes.hpp  nearest_neighbour.hpp  order_params.hpp  orientation_movetype.hpp  origami_potential.hpp  origami_system.hpp  parser.hpp  ptmc_simulation.hpp  random_gens.hpp  rg_movetypes.hpp  simulation.hpp  test_origami_system.hpp  top_constraint_points.hpp  transform_movetypes.hpp  us_simulation.hpp  utility.hpp
scripts/ideal_random_walks/: Makefile  calc_num_walks.cpp  calc_num_walks.h  input.inp
scripts/simutils/: 1d_ptmc_restart_template.inp  1d_ptmc_template.inp  2d_ptmc_template.inp  annealing_template.inp  bias_functions.json  biases_mwus.json  constantT_template.inp  constantT_template_pbs.sh  constantT_template_slurm.sh  create_1d_ptmc_inputs.sh  create_2d_ptmc_inputs.sh  create_annealing_inputs.sh  create_biases_from_pmfs.py  create_constantT_inputs.sh  create_enumerate_inputs.sh  create_input_files.py  create_mwus_inputs.sh  create_serial_inputs.sh  enumerate_template.inp  example.windows  extract_config.py  extract_mwus_restart_configs.py  extract_remc_restart_configs.py  extract_restart_traj.py  extract_serial_restart_configs.py  extract_us_config.py  generate_initial_temp_range.py  generate_ptmc_stacks.py  generate_ptmc_temps.py  generate_ptmc_temps2.py  moveset_default.json  movetypes_all.json  mwus_analysis_template_pbs.sh  mwus_init_template.inp  mwus_simulation_template_pbs.sh  mwus_template.inp  order_params_all.json  ptmc_deconvolute.py  ptmc_template_pbs.sh  ptmc_template_slurm.sh  (+5 more)
scripts/tikz/: create_tikz_diagram.py  tikz_single_template.tikz  tikz_template.tex  visualize_simulation.sh
scripts/vmd/: liborigami.tcl  pipe.tcl  view_origami_coors.tcl
src/: annealing_simulation.cpp  bias_functions.cpp  cb_movetypes.cpp  cd_scaffold_regrowth.cpp  constant_temp_simulation.cpp  domain.cpp  enumerate.cpp  files.cpp  hash.cpp  ideal_random_walk.cpp  jsoncpp.cpp  main.cpp  met_movetypes.cpp  mezei_us_simulation.cpp  movetypes.cpp  nearest_neighbour.cpp  order_params.cpp  orientation_movetype.cpp  origami_potential.cpp  origami_system.cpp  parser.cpp  ptmc_simulation.cpp  random_gens.cpp  rg_movetypes.cpp  simulation.cpp  stoichastic_weights_simulation.cpp  test.cpp  top_constraint_points.cpp  transform_movetypes.cpp  us_simulation.cpp  utility.cpp
tests/: CMakeLists.txt  Makefile  cyclic_example.json  example_origami.json  remd.py  simulate_example_origami.py  single_domain.json  test_annealing.inp  test_constant_temp.inp  test_cpp.inp  test_enumerate.inp  test_mwus.inp  test_ptmc.inp  test_us.inp
tests/data/: four.trj  four.vcf  four2_domain_loop-two_staples.json  four_domain_loop.json  simple_loop.json  simple_loop_linear.json  snodin_assembled_old-format.json  snodin_scaffold.seq  snodin_staples.seq  snodin_unbound.json  snodin_unbound_2.json  test_mwus.windows  test_snodin_unbound.json  tile_assembled.json  tile_scaffold.seq  tile_staples.seq  tile_unbound.json  two_domain-one_staple.json  two_domain.json  wrong_snodin_unbound.json
tests/outs/: test_ptmc-0.out  test_ptmc-1.out  test_ptmc-2.out
tests/python/: analysis_example.py  profiler.py  simulate_example_origami.py  test_lattice_origami_domains.py
tests/src/: test_ideal_random_walk.cpp  test_main.cpp  test_movetypes.cpp  test_nearest_neighbour.cpp  test_order_params.cpp  test_origami_system.cpp  test_random_gens.cpp  test_simulation.cpp
